--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE >
 <html lang="en">
 <head>
-    <meta charset="css/style.css" rell="stylesheet" type="text/css">
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link href ="css/style.css" rell="stylesheet" type="text/css">
 </head>
   <body><h1>Morjens!</h1>
 <p>Miten teillä menee?</p>
