--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link href ="css/style.css" rell="stylesheet" type="text/css">
+    <link href ="css/style.css" rel="stylesheet" type="text/css">
 </head>
   <body><h1>Morjens!</h1>
 <p>Miten teillä menee?</p>
